Setup Swagger documentation

--- a/fastify/package.json
+++ b/fastify/package.json
@@ -12,6 +12,8 @@
         "format:check": "prettier --check ."
     },
     "dependencies": {
+        "@fastify/swagger": "9.6.1",
+        "@fastify/swagger-ui": "5.2.3",
         "fastify": "5.6.2"
     },
     "devDependencies": {
