Use Typebox to infer schema from TypeScript structures

--- a/fastify/tsconfig.json
+++ b/fastify/tsconfig.json
@@ -6,7 +6,10 @@
         "moduleResolution": "NodeNext",
         "module": "NodeNext",
         "target": "ES2022",
-        "esModuleInterop": true
+        "esModuleInterop": true,
+        "strict": true,
+        "strictNullChecks": true,
+        "skipLibCheck": true
     },
     "include": ["src/**/*.ts"]
 }
