--- a/fastify/package.json
+++ b/fastify/package.json
@@ -14,6 +14,8 @@
     "dependencies": {
         "@fastify/swagger": "9.6.1",
         "@fastify/swagger-ui": "5.2.3",
+        "@fastify/type-provider-typebox": "6.1.0",
+        "@sinclair/typebox": "0.34.41",
         "fastify": "5.6.2"
     },
     "devDependencies": {
