--- a/nestjs/package.json
+++ b/nestjs/package.json
@@ -2,7 +2,7 @@
     "type": "module",
     "scripts": {
         "build": "nest build",
-        "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+        "format": "prettier --write .",
         "start": "nest start",
         "start:dev": "nest start --watch",
         "start:debug": "nest start --debug --watch",
@@ -10,30 +10,30 @@
         "type-check": "tsc --noEmit",
         "lint": "eslint .",
         "lint:fix": "eslint . --fix",
-        "format": "prettier --write .",
         "format:check": "prettier --check ."
     },
     "dependencies": {
         "@nestjs/common": "11.1.9",
         "@nestjs/core": "11.1.9",
+        "@nestjs/mapped-types": "2.1.0",
         "@nestjs/platform-express": "11.1.9",
+        "class-transformer": "0.5.1",
+        "class-validator": "0.14.3",
         "reflect-metadata": "0.2.2",
         "rxjs": "7.8.2"
     },
     "devDependencies": {
+        "@nestjs/cli": "11.0.12",
+        "@nestjs/schematics": "11.0.9",
+        "@types/express": "5.0.5",
+        "@types/node": "22.19.1",
+        "@types/supertest": "6.0.3",
         "@typescript-eslint/eslint-plugin": "8.48.0",
         "@typescript-eslint/parser": "8.48.0",
         "eslint": "9.39.1",
         "eslint-config-prettier": "10.1.8",
         "prettier": "3.6.2",
         "tsx": "4.20.6",
-        "typescript": "5.9.3",
-        "@nestjs/cli": "11.0.12",
-        "@nestjs/schematics": "11.0.9",
-        "@types/express": "5.0.5",
-        "@types/node": "22.19.1",
-        "@types/supertest": "6.0.3"
+        "typescript": "5.9.3"
     }
 }
-
-
